minor changes on the rooms

--- a/the-rooms.html
+++ b/the-rooms.html
@@ -451,10 +451,12 @@
                                                                     <div class="wpb_wrapper">
                                                                         <div class="stm_item-features">
                                                                         	<div class="stm_item-features_inner">
-                                                                        		<ul class="item-features_list_extended">
+                                                                        		<ul class="item-features_list">
 	                                                                     			<li class="item-feature">46" Led TV</li>
 	                                                                     			<li class="item-feature">Cable TV</li>
 	                                                                     			<li class="item-feature">DVD Player</li>
+	                                                                     		</ul>
+	                                                                     		<ul class="item-features_list">
 	                                                                     			<li class="item-feature">In room Safe</li>
 	                                                                     			<li class="item-feature">IPod dock with alarm clock</li>
 	                                                                     			<li class="item-feature">Iron and ironing board upon request</li>
@@ -559,10 +561,12 @@
                                                                     <div class="wpb_wrapper">
                                                                     	 <div class="stm_item-features">
                                                                         	<div class="stm_item-features_inner">
-                                                                        		<ul class="item-features_list_extended">
+                                                                        		<ul class="item-features_list">
                                                                         			<li class="item-feature">1 King + 2 twin beds (trundle)</li>
                                                                         			<li class="item-feature">Featherbed and Duvet</li>
                                                                         			<li class="item-feature">Luxury Linens</li>
+                                                                        		</ul>
+                                                                        		<ul class="item-features_list">
                                                                         			<li class="item-feature">Extra Pillows</li>
                                                                         			<li class="item-feature">Cribs permitted: 1 (upon request)</li>
 	                                                                        		<li class="item-feature">Maximum cribs permitted in the villa: 2</li>
