--- a/the-rooms.html
+++ b/the-rooms.html
@@ -610,10 +610,12 @@
                                                                     <div class="wpb_wrapper">
                                                                         <div class="stm_item-features">
                                                                         	<div class="stm_item-features_inner">
-                                                                        		<ul class="item-features_list_extended">
+                                                                        		<ul class="item-features_list">
 	                                                                     			<li class="item-feature">46" Led TV</li>
 	                                                                     			<li class="item-feature">Cable TV</li>
 	                                                                     			<li class="item-feature">DVD Player</li>
+	                                                                     		</ul>
+	                                                                     		<ul class="item-features_list">
 	                                                                     			<li class="item-feature">In room Safe</li>
 	                                                                     			<li class="item-feature">IPod dock with alarm clock</li>
 	                                                                     			<li class="item-feature">Iron and ironing board upon request</li>
