the rooms seems ready

--- a/overview.html
+++ b/overview.html
@@ -165,7 +165,7 @@
                 </div>
             </div>
         </div>
-        <div class="container vc-page-container" style="margin: 20px auto;">
+        <div class="container vc-page-container" style="margin: 35px auto 45px auto;">
             <div class="container-inner">
                 <div class="content">
                     <article id="post-300" class="post-300 page type-page status-publish hentry">
@@ -173,7 +173,7 @@
                             <div class="vc_col-sm-6 wpb_column vc_column_container ">
                                 <div class="wpb_wrapper">
                                     <div class="vc_custom_heading">
-                                        <h2 style="color: #636262;text-align: left;font-weight:300;font-style:normal; margin-top: 20px;">GENERAL FEATURES</h2>
+                                        <h2 style="color: 333;text-align: left;font-weight:300;font-style:normal">General Features</h2>
                                     </div>
                                     <div class="ult-spacer spacer-56253aed4f277" data-id="56253aed4f277" data-height="25" data-height-mobile="25" data-height-tab="25" data-height-tab-portrait="25" data-height-mobile-landscape="25" style="clear:both;display:block;"></div>
                                     <div class="wpb_text_column wpb_content_element ">
@@ -323,7 +323,6 @@
                                                             </div>
                                                         </div>
 
-
 														<div class="wpb_accordion_section group">
                                                             <h3 class="wpb_accordion_header ui-accordion-header"><a href="#drag-drop-builder"><strong>ENTERTAINMENT</strong></a></h3>
                                                             <div class="wpb_accordion_content ui-accordion-content vc_clearfix">
@@ -418,6 +417,18 @@
 
                             <div class="vc_col-sm-6 wpb_column vc_column_container ">
                                 <div class="wpb_wrapper">
+
+                                    <div class="wpb_single_image wpb_content_element vc_align_center">
+                                        <div class="wpb_wrapper">
+
+                                            <div class="vc_single_image-wrapper vc_box_border_grey">
+                                            	<img width="1140" height="676" src="/images/overview/Villa_Aqua_general_overview.jpg" class="vc_single_image-img attachment-full" alt="Driving-yacht" />
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                
+                                <div class="wpb_wrapper top-margin">
 
                                     <div class="wpb_single_image wpb_content_element vc_align_center">
                                         <div class="wpb_wrapper">
