--- a/the-rooms.html
+++ b/the-rooms.html
@@ -152,7 +152,7 @@
         </header>
         <!-- #masthead -->
 
-        <div class="page-header" style="background-image:url(/images/overview/Overview_header.jpg);text-align:center">
+        <div class="page-header" style="background-image:url(/images/overview/the-rooms/Villa_Aqua_rooms_header.jpg);text-align:center">
             <div class="container">
                 <div class="page-header_wrap">
                     <div class="page-header_in">
@@ -161,7 +161,7 @@
                 </div>
             </div>
         </div>
-        <div class="container vc-page-container" style="margin: 20px auto;">
+        <div class="container vc-page-container" style="margin: 35px auto 45px auto;">
             <div class="container-inner">
                 <div class="content">
                     <article id="post-300" class="post-300 page type-page status-publish hentry">
@@ -327,7 +327,6 @@
                                                 </div>
                                             </div>
                                         </div>
-
                                     </div>
                                 </div>
                             </div>
@@ -339,7 +338,7 @@
                                         <div class="wpb_wrapper">
 
                                             <div class="vc_single_image-wrapper vc_box_border_grey">
-                                            	<img width="1140" height="676" src="/images/overview/Villa_Aqua_general_overview.jpg" class="vc_single_image-img attachment-full" alt="Driving-yacht" />
+                                            	<img width="1140" height="676" src="/images/overview/the-rooms/Villa_Aqua_Masterbedroom_1.jpg" class="vc_single_image-img attachment-full" alt="Driving-yacht" />
                                             </div>
                                         </div>
                                     </div>
@@ -356,7 +355,7 @@
                                     <div class="wpb_single_image wpb_content_element vc_align_center">
                                         <div class="wpb_wrapper">
                                             <div class="vc_single_image-wrapper   vc_box_border_grey">
-                                            	<img width="1140" height="676" src="/images/overview/Villa_Aqua_bedrooms.jpg" class="vc_single_image-img attachment-full" alt="Villa Aqua Rooms" />
+                                            	<img width="1140" height="676" src="/images/overview/the-rooms/Villa_Aqua_Bedroom_2.jpg" class="vc_single_image-img attachment-full" alt="Villa Aqua Rooms" />
                                             </div>
                                         </div>
                                     </div>
@@ -678,7 +677,7 @@
                                     <div class="wpb_single_image wpb_content_element vc_align_center">
                                         <div class="wpb_wrapper">
                                             <div class="vc_single_image-wrapper   vc_box_border_grey">
-                                            	<img width="1140" height="676" src="/images/overview/Villa_aqua_living_spaces.jpg" class="vc_single_image-img attachment-full" alt="Villa Aqua Living Spaces" />
+                                            	<img width="1140" height="676" src="/images/overview/the-rooms/Villa_Aqua_Bedroom_3.jpg" class="vc_single_image-img attachment-full" alt="Villa Aqua Living Spaces" />
                                             </div>
                                         </div>
                                     </div>
@@ -694,7 +693,7 @@
                                     <div class="wpb_single_image wpb_content_element vc_align_center">
                                         <div class="wpb_wrapper">
                                             <div class="vc_single_image-wrapper   vc_box_border_grey">
-                                            	<img width="1140" height="676" src="/images/overview/Villa_Aqua_pool_outdoor.jpg" class="vc_single_image-img attachment-full" alt="Pool and Outdoor" />
+                                            	<img width="1140" height="676" src="/images/overview/the-rooms/Villa_Aqua_Bedroom_4.jpg" class="vc_single_image-img attachment-full" alt="Pool and Outdoor" />
                                             </div>
                                         </div>
                                     </div>
@@ -1022,7 +1021,7 @@
                                         <div class="wpb_wrapper">
 
                                             <div class="vc_single_image-wrapper   vc_box_border_grey">
-                                            	<img width="1140" height="676" src="/images/overview/Villa_aqua_What_to_do_inside.jpg" class="vc_single_image-img attachment-full" alt="Villa Aqua Living Spaces" />
+                                            	<img width="1140" height="676" src="/images/overview/the-rooms/Villa_Aqua_Bedroom_5.jpg" class="vc_single_image-img attachment-full" alt="Villa Aqua Living Spaces" />
                                             </div>
                                         </div>
                                     </div>
