a lot of changes

--- a/staff-and-services.html
+++ b/staff-and-services.html
@@ -237,7 +237,7 @@
                             <div class="rental-service_item">
                                 <div class="rs-item_inner">
                                     <div class="rs-item_actions">
-                                        <a class="rs-item_action_link" href="#"><i class="fa fa-eye"></i></a>
+                                        <a class="rs-item_action_link" href="at-an-extra-cost.html"><i class="fa fa-eye"></i></a>
                                     </div>
                                     <div class="rs-item_content"><img width="570" height="446" src="/images/staff-and-services/Villa_Aqua_services_not_included_food_&_beverage.jpg" class="attachment-full wp-post-image" alt="Over-the-Sea" />
                                     </div>
@@ -252,7 +252,7 @@
                             <div class="rental-service_item">
                                 <div class="rs-item_inner">
                                     <div class="rs-item_actions">
-                                        <a class="rs-item_action_link" href="#"><i class="fa fa-eye"></i></a>
+                                        <a class="rs-item_action_link" href="at-an-extra-cost.html"><i class="fa fa-eye"></i></a>
                                     </div>
                                     <div class="rs-item_content"><img width="570" height="446" src="/images/staff-and-services/Villa_Aqua_services_not_included_spa.jpg" class="attachment-full wp-post-image" alt="Above-the-clouds" />
                                     </div>
@@ -267,7 +267,7 @@
                             <div class="rental-service_item">
                                 <div class="rs-item_inner">
                                     <div class="rs-item_actions">
-                                        <a class="rs-item_action_link" href="at-extra-cost.html"><i class="fa fa-eye"></i></a>
+                                        <a class="rs-item_action_link" href="at-an-extra-cost.html"><i class="fa fa-eye"></i></a>
                                     </div>
                                     <div class="rs-item_content"><img width="570" height="446" src="/images/staff-and-services/Villa_Aqua_services_not_included_transportation.jpg" class="attachment-full wp-post-image" alt="Ready-to-way" />
                                     </div>
@@ -282,7 +282,7 @@
                             <div class="rental-service_item">
                                 <div class="rs-item_inner">
                                     <div class="rs-item_actions">
-                                        <a class="rs-item_action_link" href="at-extra-cost.html"><i class="fa fa-eye"></i></a>
+                                        <a class="rs-item_action_link" href="at-an-extra-cost.html"><i class="fa fa-eye"></i></a>
                                     </div>
                                     <div class="rs-item_content"><img width="570" height="446" src="/images/staff-and-services/Villa_Aqua_services_not_included_entertainment.jpg" class="attachment-full wp-post-image" alt="Stylish-convertible" />
                                     </div>
